updated readme fixed :4

--- a/04-Fine_Tuning.ipynb
+++ b/04-Fine_Tuning.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "# Unfreeze some layers\n",
-    "for layer in conv_base.layers[:-4]:\n",
+    "for layer in conv_base.layers[-4:]:\n",
     "    layer.trainable = True"
    ]
   },
@@ -330,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
